Actually fix results layout issue

--- a/styles/components/_Results.scss
+++ b/styles/components/_Results.scss
@@ -2,6 +2,7 @@
   background-color: $white;
   position: relative;
   padding: 0px 40px 0px 40px;
+  box-sizing: border-box;
   box-shadow: 0px 0px 30px rgba(0,0,0,0.20);
   &:before { // caret icon
     content: "";
