--- a/styles/components/_ResultsControls.scss
+++ b/styles/components/_ResultsControls.scss
@@ -12,9 +12,9 @@
     font-style: italic;
   }
   .export-button {
+    padding: 18px 0; // leave a little space on top / bottom so right border looks nice
     width: 35%;
     border: none;
     border-left: $light-grey solid 1px;
-    color: $dark-grey;
   }
 }
